--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "serve": "serve dist -p 3000"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.2",
+    "emotion": "^10.0.27",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
+    "react-static-plugin-emotion": "^7.2.2",
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
     "react-static-plugin-source-filesystem": "^7.2.0",
+    "tailwind.macro": "^1.0.0-alpha.10",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^4.0.2",
+    "react-static-plugin-tailwindcss": "^0.1.3",
     "serve": "^11.1.0"
   }
 }
