--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@iconify/icons-heroicons-outline": "^1.0.1",
+    "@iconify/react": "^1.1.3",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
