--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "analyze": "react-static build --analyze",
-    "serve": "serve dist -p 3000"
+    "serve": "serve dist -p 3000",
+    "lint:css": "stylelint ./src/pages/dashboard.js"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -14,6 +15,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.19.2",
     "emotion": "^10.0.27",
+    "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-static": "^7.2.0",
@@ -21,7 +23,6 @@
     "react-static-plugin-reach-router": "^7.2.0",
     "react-static-plugin-sitemap": "^7.2.0",
     "react-static-plugin-source-filesystem": "^7.2.0",
-    "tailwind.macro": "^1.0.0-alpha.10",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
@@ -36,7 +37,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^4.0.2",
-    "react-static-plugin-tailwindcss": "^0.1.3",
-    "serve": "^11.1.0"
+    "serve": "^11.1.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0"
   }
 }
