--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.19.2",
     "emotion": "^10.0.27",
+    "facepaint": "^1.2.1",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@iconify/icons-heroicons-outline": "^1.0.1",
+    "@iconify/icons-la": "^1.0.0",
     "@iconify/react": "^1.1.3",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
